110 resolve screen overflow issue with multiple files in chat (#151)
* chore: formatting

* feat: make files draggable

* refactor: remove comment

* fix: re-add finish_reason, was removed for some reason

* Enhance UX by enabling scrollbar visibility on non-mobile devices for file sections

---------

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -113,4 +113,12 @@
           -ms-overflow-style: none;  /* IE and Edge */
           scrollbar-width: none;  /* Firefox */
     }
+    .scrollbar-show {
+      scrollbar-width: auto; /* Firefox */
+      -ms-overflow-style: auto; /* IE and Edge */
+    }
+    .scrollbar-show::-webkit-scrollbar {
+      display: block; /* Chrome, Safari, Opera */
+    }
   }
+
